--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
@@ -27,5 +28,8 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "vite": "^6.0.5"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
